<ScrollView
    android:id="@+id/recipe_detail_scrollview"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#e2dbe2"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout

        android:padding="@dimen/spacingMedium"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_width="match_parent">

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            card_view:cardCornerRadius="4dp">
            <LinearLayout
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_width="match_parent">
            <TextView
                android:id="@+id/detail_title"
                android:text="@string/ingredients"
                android:textSize="@dimen/textTitle"
                android:padding="@dimen/spacingSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/detail_ingredients"
                android:padding="@dimen/spacingSmall"
                android:textSize="@dimen/textBody"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            />

        <RelativeLayout
            android:id="@+id/detail_steps_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:descendantFocusability="blocksDescendants">
            <android.support.v7.widget.RecyclerView

                android:id="@+id/detail_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="16dp"
            />

        <!--<android.support.v7.widget.CardView-->
            <!--xmlns:card_view="http://schemas.android.com/apk/res-auto"-->
            <!--android:layout_gravity="center"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--card_view:cardCornerRadius="4dp">-->
            <!--<LinearLayout-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="vertical"-->
                <!--android:layout_width="match_parent">-->
            <!--<android.support.v7.widget.RecyclerView-->

                <!--android:id="@+id/detail_steps"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"/>-->
            <!--</LinearLayout>-->
        <!--</android.support.v7.widget.CardView>-->


    </LinearLayout>
</ScrollView >
