...
    android:id="@+id/recipe_list_relativelayout"
    android:background="#e2dbe2"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_grid"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

</RelativeLayout>


...
